# beanlog

./: .gitignore  BUSINESS_PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements.txt  run_seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  bean.py  flavor_note.py  origin.py  review.py  roaster.py  user.py
backend/app/repositories/: bean_repo.py  review_repo.py  roaster_repo.py
backend/app/routers/: beans.py  master.py  reviews.py  roasters.py  users.py
backend/app/schemas/: bean.py  common.py  master.py  review.py  roaster.py  user.py
backend/app/scripts/: seed.py  seed_beans.py  seed_reviews.py  seed_roasters.py
backend/app/services/: bean_service.py  embedding_service.py  review_service.py  roaster_service.py
backend/tests/: conftest.py
docker/: init.sql
docs/: API_DESIGN.md  DATA_STRATEGY.md  DB_SCHEMA.md  DEV_SETUP.md  DIRECTORY_STRUCTURE.md  MVP_SPEC.md  TECH_DESIGN.md
frontend/: .env.example  package.json  pnpm-lock.yaml  vercel.json
frontend/messages/: en.json  ja.json
frontend/public/: manifest.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
research/: 20260212-market-review-and-recommendations.md  20260213-trending-beans-research.md
shared/: README.md
shared/constants/: brew_methods.json  flavor_tags.json  origins.json  processes.json  roast_levels.json
(+50 files in other folders)
